Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40167

Nested PinchArea and MultiPointTouchArea blocking events

XMLWordPrintable

    • iOS/tvOS/watchOS

      When there is a touch in one MultiPointTouchArea, no other PinchArea recognises a pinch-event.

      Use the attached example application to reproduce the issue.
      Hold the rectangle in the bottom-left screen. While holding it, try to pinch any other rectangle.

        For Gerrit Dashboard: QTBUG-40167
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            kileppal Kimmo Leppälä
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes